# mas_embedded_threadx

./: .clangd  .gitattributes
.claude/: settings.json
apps/: config.cmake
apps/hero/: hero_def.h  robot.cmake
apps/hero/single_board/: robot_control.c  robot_control.h
apps/infantry3/: infantry_def.h
apps/infantry3/single_board/: robot_control.c  robot_control.h
apps/sentry/: sentry_def.h
apps/templates/: robot_def.h
apps/templates/chassis_board/: robot_control.c  robot_control.h
apps/templates/gimbal_board/: robot_control.c  robot_control.h
apps/templates/single_board/: robot_control.c  robot_control.h
board/bsp/CAN/: CAN.MD  bsp_can.h
board/bsp/I2C/: I2C.MD  bsp_i2c.c
board/damiao_h7/: .mxproject  CMakeLists.txt  base.ioc
board/dji_c/: CMakeLists.txt
modules/BOARDCOMM/: BOARDCOMM.MD  module_boardcomm.c  module_boardcomm.h
modules/MOTOR/DAMIAO/: DAMIAO.MD  motor_damiao.c
modules/MOTOR/DJI/: DJI.MD  motor_dji.c
modules/MOTOR/POWER_CONTROL/: power_control.c
modules/REFEREE/: module_referee.c  module_referee.h
modules/REMOTE/: REMOTE.MD  module_remote.h
modules/REMOTE/DT7/: dt7.c
modules/REMOTE/SBUS/: sbus.c
modules/REMOTE/VT02/: vt02.c
modules/REMOTE/VT03/: vt03.c
modules/SuperCap/: module_supercap.c  module_supercap.h
modules/VISION/: module_vision.c  module_vision.h
modules/WT606/: module_wt606.c  module_wt606.h
modules/algorithm/: lqr.c
robot/: CMakeLists.txt
utils/: CMakeLists.txt
utils/list/: list.c  list.h  list.md
utils/ulog/: SEGGER_RTT_Conf.h  printf.c  ulog.c  ulog.h  ulog_def.h
(+40 files in other folders)
